--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@iexec/iexec-oracle-factory-wrapper": "^1.0.4",
+    "@toruslabs/torus-embed": "^1.25.1",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "@coinbase/wallet-sdk": "^3.3.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "sass-loader": "^10.3.0",
+    "sass-migrator": "^1.5.6",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuex-persistedstate": "^4.1.0",
+    "web3modal-vue": "^1.0.5",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
