--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-regular-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
     "@iexec/iexec-oracle-factory-wrapper": "^1.0.4",
+    "@nuxtjs/google-fonts": "^3.0.0-0",
     "@toruslabs/torus-embed": "^1.25.1",
     "@walletconnect/web3-provider": "^1.7.8",
-    "@coinbase/wallet-sdk": "^3.3.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "fortmatic": "^2.4.0",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
     "sass-loader": "^10.3.0",
