--- a/.github/workflows/solidity.yml
+++ b/.github/workflows/solidity.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
-      - name: Install dependencies
-        run: npm ci
+      - name: Go to Soldity repository and install dependencies
+        run: cd solidity/ && npm ci
       - name: Compile contracts
         run: npm run compile
       - name: Test contracts
