--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@iexec/iexec-oracle-factory-wrapper": "^1.0.4",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/google-fonts": "^3.0.0-0",
     "@toruslabs/torus-embed": "^1.25.1",
     "@walletconnect/web3-provider": "^1.7.8",
+    "body-parser": "^1.20.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
+    "express": "^4.18.1",
     "fortmatic": "^2.4.0",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
@@ -32,7 +35,7 @@
     "vue-template-compiler": "^2.6.14",
     "vuex-persistedstate": "^4.1.0",
     "web3modal-vue": "^1.0.5",
-    "webpack": "^4.46.0"
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "hardhat": "^2.10.2"
