--- a/solidity/package.json
+++ b/solidity/package.json
@@ -12,10 +12,7 @@
     "check:format": "solhint contracts/*.sol --fix",
     "deploy:mainnet": "npx hardhat run scripts/deploy.js --network mainnet",
     "deploy:goerli": "npx hardhat run scripts/deploy.js --network goerli",
-    "deploy:polygon:mainnet": "npx hardhat run scripts/deploy.js --network polygonMainnet",
-    "deploy:polygon:mumbai": "npx hardhat run scripts/deploy-test.js --network polygonMumbai",
-    "deploy:bsc:mainnet": "npx hardhat run scripts/deploy.js --network bscMainnet",
-    "deploy:bsc:testnet": "npx hardhat run scripts/deploy.js --network bscTestnet",
+    "deploy:bellecour": "npx hardhat run scripts/deploy.js --network bellecour",
     "tools:surya:graph": "surya graph ./contracts/**/*.sol | dot -Tpng > build/TokenVesting.png",
     "tools:surya:report": "surya mdreport build/docs/surya-report.md contracts/TokenVesting.sol"
   },
