--- a/.github/workflows/solidity.yml
+++ b/.github/workflows/solidity.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - name: Install dependencies
-        run: cd solidity/ && npm ci
+        run: cd solidity/ && npm i
       - name: Compile contracts
         run: cd solidity/ && npm run compile
       - name: Test contracts
