--- a/solidity/package.json
+++ b/solidity/package.json
@@ -13,6 +13,7 @@
     "deploy:mainnet": "npx hardhat run scripts/deploy.js --network mainnet",
     "deploy:goerli": "npx hardhat run scripts/deploy.js --network goerli",
     "deploy:bellecour": "npx hardhat run scripts/deploy.js --network bellecour",
+    "deploy:vivani": "npx hardhat run scripts/deploy.js --network vivani",
     "tools:surya:graph": "surya graph ./contracts/**/*.sol | dot -Tpng > build/TokenVesting.png",
     "tools:surya:report": "surya mdreport build/docs/surya-report.md contracts/TokenVesting.sol"
   },
