--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.0.0",
     "web3modal-vue": "^1.0.5",
     "webpack": "^4.43.0"
