--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxtjs/google-fonts": "^3.0.0-0",
     "@toruslabs/torus-embed": "^1.35.5",
     "@walletconnect/web3-provider": "^1.7.8",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
