--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fortmatic": "^2.4.0",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "sass": "^1.46.0",
     "sass-loader": "^10.3.0",
     "sass-migrator": "^1.5.6",
     "vue": "^2.6.14",
